2005-08-31 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/sections.dox: catch up with .init4 reality (fix for
	bug #14262)

2005-08-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/wdt.h: Document the watchdog remaining active after
	a watchdog reset, and how to turn it off.

2005-08-15 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/tools-install.dox (avr-libc): fix a missing "tar" command.

2005-08-14 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/main_page.dox: Add explanations about the intented
	standard conformance, as well as about the (non-)reentrancy of
	our library functions.  Other minor corrections.
	* doc/examples/demo/demo.dox: Reality-check: the AT90S2313 is
	obsolete, explain usage of ATtiny2313/ATmega8/48/88/168.
	* include/avr/eeprom.h: Add a hint about the non-reentrancy
	of the EEPROM functions.

2005-08-05 Anatoly Sokolov <aesok@pautinka.net>

	* libc/stdio/fgetc.c (fgetc) : Prevent movement of the pointer 
	over the end of a string.
	[Fixed bug #12775]

2005-07-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Released avr-libc-1.2.5.

2005-08-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* INSTALL: emphasize that users ought to use ./doconf.

2005-07-31 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	(Contributed by Chris Candreva <chris at westnet dot com>)
	* doc/api/sfr.dox: document replacements for sbi/cbi.

	(Contributed by Bjarne Laursen <bl at rosetechnology dot dk>)
	* libm/fplib/strtod.S: fix endptr bug (bug#12646, patch#4137).

2005-07-31 Bjoern Haase <bjoern.m.haase@web.de>

	* include/avr/eeprom.h: re-write of all functions
	and documentation update. EEMEM, add.
	* include/avr/iocan128.h: __EEPROM_REG_LOCATIONS__ define
	* include/avr/iom165.h, include/avr/iom169.h: Ditto.
	* include/avr/iom325.h, include/avr/iom3250.h: Ditto.
	* include/avr/iom645.h, include/avr/iom6450.h: Ditto.
	* include/avr/iomx8.h: Ditto.
	* libc/misc/Makefile.am:
	lib_a_asm_sources modify, eeprom_asm_sources add,